[package]
name = "lwip"
version = "0.3.8"
edition = "2021"
description = "Rust bindings for the lwIP TCP/IP stack"
license = "MIT/Apache-2.0"
authors = ["@ssrlive"]
documentation = "https://docs.rs/lwip"
homepage = "https://github.com/ssrlive/lwip"
readme = "README.md"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "rust/lib.rs"

[dependencies]
tokio = { version = "1", features = [
  "sync",
  "io-util",
  "net",
  "time",
  "rt",
  "rt-multi-thread",
] }
futures = "0.3"
log = "0.4"
anyhow = "1.0"
bytes = "1"
thiserror = "1"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
